--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
       href="https://fonts.googleapis.com/css2?family=Mulish:wght@400;700&family=Nunito:wght@400;700;800&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="css/styles.css" />
     <title>Best Tour Plan - Hotel Booking</title>
   </head>
   <body>
