--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
               alt="Logo: Best Tour Plan"
               class="logo__image"
           /></a>
-          <form action="#" class="search">
+          <form action="#" class="search header__search">
             <input
               type="text"
               class="search__input"
@@ -33,7 +33,7 @@
           <a href="#" class="user">
             <img
               src="img/user-avatar.jpg "
-              alt="avatar: Nathan"
+              alt="Avatar: Nathan"
               class="user__avatar"
             />
             <span class="user__name">Nathan</span>
