create: added slider to hotel-section

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
       href="https://fonts.googleapis.com/css2?family=Mulish:wght@400;700&family=Nunito:wght@400;700;800&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="css/swiper-bundle.min.css" />
     <link rel="stylesheet" href="css/styles.css" />
     <title>Best Tour Plan - Hotel Booking</title>
   </head>
@@ -121,8 +122,35 @@
         </div>
         <!-- /.hotel-info__text -->
       </div>
-      <!-- /.container -->
+      <div class="hotel-grid">
+        <div class="container">
+          <div class="slider">
+            <!-- Slider main container -->
+            <div class="swiper-container">
+              <!-- Additional required wrapper -->
+              <div class="swiper-wrapper">
+                <!-- Slides -->
+                <div class="swiper-slide">
+                  <img src="img/slide.png" alt="" />
+                </div>
+                <div class="swiper-slide">Slide 2</div>
+                <div class="swiper-slide">Slide 3</div>
+              </div>
+
+              <!-- If we need navigation buttons -->
+              <div class="slider-button slider-button--prev"></div>
+              <div class="slider-button slider-button--next"></div>
+            </div>
+            <!-- /.swiper-container -->
+          </div>
+          <!-- /.slider -->
+        </div>
+        <!-- /.container -->
+      </div>
+      <!-- /.hotel-grid -->
     </section>
     <!-- /.hotel -->
+    <script src="js/swiper-bundle.min.js"></script>
+    <script src="js/main.js"></script>
   </body>
 </html>
