--- a/index.html
+++ b/index.html
@@ -131,10 +131,20 @@
               <div class="swiper-wrapper">
                 <!-- Slides -->
                 <div class="swiper-slide">
-                  <img src="img/slide.png" alt="" />
+                  <img src="img/slide-1.jpg" alt="Slide-1" />
                 </div>
-                <div class="swiper-slide">Slide 2</div>
-                <div class="swiper-slide">Slide 3</div>
+                <div class="swiper-slide">
+                  <img src="img/slide-2.jpg" alt="Slide-2" />
+                </div>
+                <div class="swiper-slide">
+                  <img src="img/slide-3.jpg" alt="Slide 3" />
+                </div>
+                <div class="swiper-slide">
+                  <img src="img/slide-4.jpg" alt="Slide 4" />
+                </div>
+                <div class="swiper-slide">
+                  <img src="img/slide-5.jpg" alt="Slide 5" />
+                </div>
               </div>
 
               <!-- If we need navigation buttons -->
