--- a/index.html
+++ b/index.html
@@ -9,10 +9,8 @@
     />
     <link rel="stylesheet" href="css/swiper-bundle.min.css" />
     <link rel="stylesheet" href="css/styles.css" />
-    <script
-      src="https://api-maps.yandex.ru/2.1/?apikey=138986ea-965a-4669-b09c-37c6c7161bc9&lang=ru_RU"
-      type="text/javascript"
-    ></script>
+    <script src="https://api-maps.yandex.ru/2.1/?apikey=138986ea-965a-4669-b09c-37c6c7161bc9&lang=ru_RU"></script>
+    <!-- type="text/javascript" -->
     <title>Best Tour Plan - Hotel Booking</title>
   </head>
   <body>
@@ -128,26 +126,46 @@
       </div>
       <div class="container">
         <div class="hotel-grid">
-          <div class="slider">
+          <div class="slider hotel__slider">
             <!-- Slider main container -->
             <div class="swiper-container">
               <!-- Additional required wrapper -->
               <div class="swiper-wrapper">
                 <!-- Slides -->
                 <div class="swiper-slide">
-                  <img src="img/slide-1.jpg" alt="Slide-1" />
+                  <img
+                    class="swiper-slide__image"
+                    src="img/slide-1.jpg"
+                    alt="Slide-1"
+                  />
                 </div>
                 <div class="swiper-slide">
-                  <img src="img/slide-2.jpg" alt="Slide-2" />
+                  <img
+                    class="swiper-slide__image"
+                    src="img/slide-2.jpg"
+                    alt="Slide-2"
+                  />
                 </div>
                 <div class="swiper-slide">
-                  <img src="img/slide-3.jpg" alt="Slide 3" />
+                  <img
+                    class="swiper-slide__image"
+                    src="img/slide-3.jpg"
+                    alt="Slide 3"
+                  />
                 </div>
                 <div class="swiper-slide">
-                  <img src="img/slide-4.jpg" alt="Slide 4" />
+                  <img
+                    class="swiper-slide__image"
+                    src="img/slide-4.jpg"
+                    alt="Slide 4"
+                  />
                 </div>
                 <div class="swiper-slide">
-                  <img src="img/slide-5.jpg" alt="Slide 5" />
+                  <img
+                    class="swiper-slide__image"
+                    src="img/slide-5.jpg"
+                    alt="Slide 5"
+                  />
                 </div>
               </div>
               <!-- If we need navigation buttons -->
