create: added reviews block and smth fixed

--- a/index.html
+++ b/index.html
@@ -126,55 +126,53 @@
       </div>
       <div class="container">
         <div class="hotel-grid">
-          <div class="slider hotel__slider">
-            <!-- Slider main container -->
-            <div class="swiper-container">
-              <!-- Additional required wrapper -->
-              <div class="swiper-wrapper">
-                <!-- Slides -->
-                <div class="swiper-slide">
-                  <img
-                    class="swiper-slide__image"
-                    src="img/slide-1.jpg"
-                    alt="Slide-1"
-                  />
-                </div>
-                <div class="swiper-slide">
-                  <img
-                    class="swiper-slide__image"
-                    src="img/slide-2.jpg"
-                    alt="Slide-2"
-                  />
-                </div>
-                <div class="swiper-slide">
-                  <img
-                    class="swiper-slide__image"
-                    src="img/slide-3.jpg"
-                    alt="Slide 3"
-                  />
-                </div>
-                <div class="swiper-slide">
-                  <img
-                    class="swiper-slide__image"
-                    src="img/slide-4.jpg"
-                    alt="Slide 4"
-                  />
-                </div>
-                <div class="swiper-slide">
-                  <img
-                    class="swiper-slide__image"
-                    src="img/slide-5.jpg"
-                    alt="Slide 5"
-                  />
-                </div>
+          <!-- Slider main container -->
+          <div class="swiper-container hotel-slider hotel__slider">
+            <!-- Additional required wrapper -->
+            <div class="swiper-wrapper">
+              <!-- Slides -->
+              <div class="swiper-slide hotel-slider__item">
+                <img
+                  class="swiper-slide__image"
+                  src="img/slide-1.jpg"
+                  alt="Slide-1"
+                />
               </div>
-              <!-- If we need navigation buttons -->
-              <div class="slider-button slider-button--prev"></div>
-              <div class="slider-button slider-button--next"></div>
+              <div class="swiper-slide hotel-slider__item">
+                <img
+                  class="swiper-slide__image"
+                  src="img/slide-2.jpg"
+                  alt="Slide-2"
+                />
+              </div>
+              <div class="swiper-slide hotel-slider__item">
+                <img
+                  class="swiper-slide__image"
+                  src="img/slide-3.jpg"
+                  alt="Slide 3"
+                />
+              </div>
+              <div class="swiper-slide hotel-slider__item">
+                <img
+                  class="swiper-slide__image"
+                  src="img/slide-4.jpg"
+                  alt="Slide 4"
+                />
+              </div>
+              <div class="swiper-slide hotel-slider__item">
+                <img
+                  class="swiper-slide__image"
+                  src="img/slide-5.jpg"
+                  alt="Slide 5"
+                />
+              </div>
             </div>
-            <!-- /.swiper-container -->
+            <!-- If we need navigation buttons -->
+            <div class="hotel-slider__button hotel-slider__button--prev"></div>
+            <div class="hotel-slider__button hotel-slider__button--next"></div>
           </div>
-          <!-- /.slider -->
+          <!-- /.swiper-container -->
+
           <div class="hotel-right">
             <div class="booking">
               <div class="booking__info">
@@ -243,10 +241,197 @@
             <button class="subscribe__button">Send</button>
           </form>
         </div>
+        <!-- /.newsletter-wrapper -->
       </div>
-      <!-- /.newsletter-wrapper -->
     </section>
     <!-- /.newsletter -->
+    <section class="reviews">
+      <div class="container">
+        <h2 class="reviews__title">What people thinks about us</h2>
+        <div class="swiper-container reviews-slider">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide">
+              <div class="reviews-slider__item">
+                <div class="reviews-slider__profile">
+                  <img
+                    src="img/reviews-avatar-1.jpg"
+                    alt="Photo: Megan Fox"
+                    class="reviews-slider__avatar"
+                  />
+                  <h3 class="reviews-slider__username">Megan Fox</h3>
+                  <span class="reviews-slider__date">Stayed 18 Nov, 2019</span>
+                  <div class="reviews-slider__rating">
+                    <img src="img/star.svg" alt="star" />
+                    <img src="img/star.svg" alt="star" />
+                    <img src="img/star.svg" alt="star" />
+                    <img src="img/star.svg" alt="star" />
+                    <img src="img/star.svg" alt="star" />
+                  </div>
+                  <!-- /.reviews-slider__rating -->
+                </div>
+                <!-- /.reviews-slider__profile -->
+                <p class="reviews-slider__text">
+                  It was very nice hotel with cleanliness. Staff behavior was
+                  good and polite. They welcome us very well. Issue was only
+                  that Lift was not in working and we were allotted to 3rd floor
+                  and amenities articles were in corner of gallery which were
+                  giving bad feeling. Breakfast was good and support of the
+                  staff was also very nice. Location is not good as per
+                  atmosphere, it is very nearby most of the popular places but
+                  self location in a narrow street is not good. Overall it was a
+                  good experience and could recommend.
+                </p>
+              </div>
+              <!-- /.reviews-slider__item -->
+            </div>
+            <!-- /.swiper-slide -->
+            <div class="swiper-slide">
+              <div class="reviews-slider__item">
+                <div class="reviews-slider__profile">
+                  <img
+                    src="img/reviews-avatar-2.jpg"
+                    alt="Photo: Harry Potter"
+                    class="reviews-slider__avatar"
+                  />
+                  <h3 class="reviews-slider__username">Harry Potter</h3>
+                  <span class="reviews-slider__date">Stayed 13 Jul, 1843</span>
+                  <div class="reviews-slider__rating">
+                    <img src="img/star.svg" alt="star" />
+                    <img src="img/star.svg" alt="star" />
+                    <img src="img/star.svg" alt="star" />
+                    <img src="img/star.svg" alt="star" />
+                    <img src="img/star.svg" alt="star" />
+                  </div>
+                  <!-- /.reviews-slider__rating -->
+                </div>
+                <!-- /.reviews-slider__profile -->
+                <p class="reviews-slider__text">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro
+                  necessitatibus culpa labore soluta eveniet, reiciendis
+                  aspernatur, tenetur hic, facere laudantium rem iure quam
+                  veniam libero ex eos doloremque nostrum harum velit
+                  perferendis recusandae fugiat. Repudiandae, molestias rerum
+                  porro recusandae nostrum inventore ipsam nemo voluptatum
+                  minima quasi dolorum doloremque provident voluptatem.
+                </p>
+              </div>
+              <!-- /.reviews-slider__item -->
+            </div>
+            <!-- /.swiper-slide -->
+            <div class="swiper-slide">
+              <div class="reviews-slider__item">
+                <div class="reviews-slider__profile">
+                  <img
+                    src="img/reviews-avatar-3.jpg"
+                    alt="Photo: Marry Williams"
+                    class="reviews-slider__avatar"
+                  />
+                  <h3 class="reviews-slider__username">Marry Williams</h3>
+                  <span class="reviews-slider__date">Stayed 24 Dec, 2011</span>
+                  <div class="reviews-slider__rating">
+                    <img src="img/star.svg" alt="star" />
+                    <img src="img/star.svg" alt="star" />
+                    <img src="img/star.svg" alt="star" />
+                    <img src="img/star.svg" alt="star" />
+                    <img src="img/star.svg" alt="star" />
+                  </div>
+                  <!-- /.reviews-slider__rating -->
+                </div>
+                <!-- /.reviews-slider__profile -->
+                <p class="reviews-slider__text">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis
+                  error iure cupiditate eaque pariatur eveniet corrupti modi hic
+                  voluptates dolore nemo excepturi obcaecati soluta, non
+                  voluptatum impedit explicabo saepe animi. Earum recusandae
+                  nihil amet culpa vel non cumque, cum quis a aliquid ipsam
+                  voluptates. Ducimus obcaecati sit, autem exercitationem
+                  dignissimos ea magnam ex quae unde sunt mollitia est rem,
+                  consequuntur recusandae. Quidem dignissimos exercitationem
+                  voluptatem?
+                </p>
+              </div>
+              <!-- /.reviews-slider__item -->
+            </div>
+            <!-- /.swiper-slide -->
+            <div class="swiper-slide">
+              <div class="reviews-slider__item">
+                <div class="reviews-slider__profile">
+                  <img
+                    src="img/reviews-avatar-4.jpg"
+                    alt="Photo: Gretta Tunberg"
+                    class="reviews-slider__avatar"
+                  />
+                  <h3 class="reviews-slider__username">Gretta Tunberg</h3>
+                  <span class="reviews-slider__date">Stayed 12 Sep, 2020</span>
+                  <div class="reviews-slider__rating">
+                    <img src="img/star.svg" alt="star" />
+                    <img src="img/star.svg" alt="star" />
+                    <img src="img/star.svg" alt="star" />
+                    <img src="img/star.svg" alt="star" />
+                    <img src="img/star.svg" alt="star" />
+                  </div>
+                  <!-- /.reviews-slider__rating -->
+                </div>
+                <!-- /.reviews-slider__profile -->
+                <p class="reviews-slider__text">
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                  Officia quidem temporibus facere blanditiis, molestias
+                  nesciunt corrupti natus incidunt rerum exercitationem
+                  adipisci, ea excepturi optio necessitatibus odio? Illo iusto
+                  et nulla!
+                </p>
+              </div>
+              <!-- /.reviews-slider__item -->
+            </div>
+            <!-- /.swiper-slide -->
+            <div class="swiper-slide">
+              <div class="reviews-slider__item">
+                <div class="reviews-slider__profile">
+                  <img
+                    src="img/reviews-avatar-5.jpg"
+                    alt="Photo: Dakota Jhonson"
+                    class="reviews-slider__avatar"
+                  />
+                  <h3 class="reviews-slider__username">Dakota Jhonson</h3>
+                  <span class="reviews-slider__date">Stayed 5 Apr, 2012</span>
+                  <div class="reviews-slider__rating">
+                    <img src="img/star.svg" alt="star" />
+                    <img src="img/star.svg" alt="star" />
+                    <img src="img/star.svg" alt="star" />
+                    <img src="img/star.svg" alt="star" />
+                    <img src="img/star.svg" alt="star" />
+                  </div>
+                  <!-- /.reviews-slider__rating -->
+                </div>
+                <!-- /.reviews-slider__profile -->
+                <p class="reviews-slider__text">
+                  Lorem ipsum dolor sit, amet consectetur adipisicing elit. A,
+                  alias. Saepe, enim. Officia ab fugit ullam doloribus quod.
+                  Quisquam inventore autem ex ipsam veritatis aliquid, at quasi
+                  magnam quas libero sequi recusandae commodi aspernatur vero
+                  accusamus delectus quia odio molestias quae modi, amet,
+                  obcaecati qui eaque? Cupiditate sunt voluptatibus soluta modi
+                  consequatur eligendi voluptate quae quo eaque odit at, nostrum
+                  doloribus dolorum deserunt delectus? Excepturi similique
+                  tempora qui eaque aliquid.
+                </p>
+              </div>
+              <!-- /.reviews-slider__item -->
+            </div>
+            <!-- /.swiper-slide -->
+          </div>
+          <!-- /.swiper-wrapper -->
+          <div
+            class="reviews-slider__button reviews-slider__button--prev"
+          ></div>
+          <div
+            class="reviews-slider__button reviews-slider__button--next"
+          ></div>
+        </div>
+        <!-- /.reviews-slider -->
+      </div>
+    </section>
+    <!-- /.reviews -->
     <script src="js/swiper-bundle.min.js"></script>
     <script src="js/main.js"></script>
   </body>
