--- a/index.html
+++ b/index.html
@@ -225,7 +225,8 @@
       <!-- /.container -->
     </section>
     <!-- /.hotel -->
-    <section class="newsletter">
+    <section class="newsletter" data-parallax="scroll" data-speed="0.3">
+      <!-- data-image-src="img/newsletter-bg.jpg" -->
       <div class="container">
         <div class="newsletter-wrapper">
           <h2 class="newsletter-title newsletter__title">
@@ -432,6 +433,8 @@
       </div>
     </section>
     <!-- /.reviews -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+    <script src="js/parallax.min.js"></script>
     <script src="js/swiper-bundle.min.js"></script>
     <script src="js/main.js"></script>
   </body>
