--- a/index.html
+++ b/index.html
@@ -433,6 +433,65 @@
       </div>
     </section>
     <!-- /.reviews -->
+    <section class="activities">
+      <div class="container">
+        <h2 class="activities__title">Other Activities</h2>
+        <div class="activities-wrapper">
+          <div class="card activities__card">
+            <img
+              src="img/card-image-1.jpg"
+              alt="The curious corner of chamarel"
+              class="card__image"
+            />
+            <h3 class="card__title">The curious corner of chamarel</h3>
+            <!-- /.card__title -->
+            <button class="card__button">Book Now</button>
+            <!-- /.card__button -->
+          </div>
+          <!-- /.card -->
+          <div class="card activities__card">
+            <img
+              src="img/card-image-2.jpg"
+              alt="Gymkhana club golf course"
+              class="card__image"
+            />
+            <h3 class="card__title">Gymkhana club golf course</h3>
+            <!-- /.card__title -->
+            <button class="card__button">Book Now</button>
+            <!-- /.card__button -->
+          </div>
+          <!-- /.card -->
+          <div class="card activities__card">
+            <img
+              src="img/card-image-3.jpg"
+              alt="Tamarind falls hiking trip - full day"
+              class="card__image"
+            />
+            <h3 class="card__title">Tamarind falls hiking trip - full day</h3>
+            <!-- /.card__title -->
+            <button class="card__button">Book Now</button>
+            <!-- /.card__button -->
+          </div>
+          <!-- /.card -->
+          <div class="card activities__card">
+            <img
+              src="img/card-image-4.jpg"
+              alt="The blue marine discovery quest"
+              class="card__image"
+            />
+            <h3 class="card__title">The blue marine discovery quest</h3>
+            <!-- /.card__title -->
+            <button class="card__button">Book Now</button>
+            <!-- /.card__button -->
+          </div>
+          <!-- /.card -->
+        </div>
+        <!-- /.activities-wrapper -->
+        <!-- /.activities__title -->
+      </div>
+      <!-- /.container -->
+    </section>
+    <!-- /.activities -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script src="js/parallax.min.js"></script>
     <script src="js/swiper-bundle.min.js"></script>
