--- a/index.html
+++ b/index.html
@@ -443,7 +443,10 @@
               alt="The curious corner of chamarel"
               class="card__image"
             />
-            <h3 class="card__title">The curious corner of chamarel</h3>
+            <h3 class="card__title">
+              The curious corner<br />
+              of chamarel
+            </h3>
             <!-- /.card__title -->
             <button class="card__button">Book Now</button>
             <!-- /.card__button -->
@@ -455,7 +458,10 @@
               alt="Gymkhana club golf course"
               class="card__image"
             />
-            <h3 class="card__title">Gymkhana club golf course</h3>
+            <h3 class="card__title">
+              Gymkhana club golf <br />
+              course
+            </h3>
             <!-- /.card__title -->
             <button class="card__button">Book Now</button>
             <!-- /.card__button -->
@@ -467,7 +473,10 @@
               alt="Tamarind falls hiking trip - full day"
               class="card__image"
             />
-            <h3 class="card__title">Tamarind falls hiking trip - full day</h3>
+            <h3 class="card__title">
+              Tamarind falls hiking <br />
+              trip - full day
+            </h3>
             <!-- /.card__title -->
             <button class="card__button">Book Now</button>
             <!-- /.card__button -->
@@ -479,7 +488,10 @@
               alt="The blue marine discovery quest"
               class="card__image"
             />
-            <h3 class="card__title">The blue marine discovery quest</h3>
+            <h3 class="card__title">
+              The blue marine discovery <br />
+              quest
+            </h3>
             <!-- /.card__title -->
             <button class="card__button">Book Now</button>
             <!-- /.card__button -->
