create: added footer bottom

--- a/index.html
+++ b/index.html
@@ -685,6 +685,18 @@
           <!-- /.footer__contact-form -->
         </div>
         <!-- /.footer-wrapper -->
+        <div class="footer-wrapper-bottom">
+          <div class="footer-container">
+            <div class="footer__information">
+              <a href="#" class="footer__policy">Disclaimer</a>
+              <a href="#" class="footer__policy">Conditions of use</a>
+              <a href="#" class="footer__policy">Cancellation policy</a>
+            </div>
+            <img src="img/pay-way.png" alt="pay-way " class="footer__pay-way" />
+          </div>
+          <!-- /.footer-container -->
+        </div>
+        <!-- /.footer-wrapper-bottom -->
       </div>
       <!-- /.container -->
     </footer>
