fixed: very very mnogo...

--- a/index.html
+++ b/index.html
@@ -639,10 +639,15 @@
                     class="footer__icon"
                   />
                 </div>
-                Tel (business hours) : 269 1500 <br />
-                Tel (hotline) Monday - Saturday: 52-56-61-38 (08:00 am – 20:00
-                pm) <br />
-                Tel (hotline) Sunday: 52-56-61-38 (08:00 am – 14:00 pm)
+                Tel (business hours) :
+                <a href="tel:269 1500" class="footer__number">269 1500</a>
+                <br />
+                Tel (hotline) Monday - Saturday:
+                <a href="tel:52-56-61-38" class="footer__number">52-56-61-38</a>
+                (08:00 am – 20:00 pm) <br />
+                Tel (hotline) Sunday:
+                <a href="tel:52-56-61-38" class="footer__number">52-56-61-38</a>
+                (08:00 am – 14:00 pm)
               </li>
               <li class="footer__item footer__item--mb-2">
                 <div class="footer__icon-wrapper">
@@ -652,7 +657,9 @@
                     class="footer__icon"
                   />
                 </div>
-                cherly.lawson@example.com
+                <a href="mailto:cherly.lawson@example.com" class="footer__mail"
+                  >cherly.lawson@example.com</a
+                >
               </li>
             </ul>
           </div>
