--- a/index.html
+++ b/index.html
@@ -671,7 +671,7 @@
                   />
                 </div>
                 Tel (business hours) :
-                <a href="tel:269 1500" class="footer__number">269 1500</a>
+                <a href="tel:2691500" class="footer__number">269 1500</a>
                 <br />
                 Tel (hotline) Monday - Saturday:
                 <a href="tel:52-56-61-38" class="footer__number">52-56-61-38</a>
