created: validation for input form

--- a/index.html
+++ b/index.html
@@ -272,13 +272,13 @@
           <form
             action="send.php"
             method="POST"
-            class="subscribe newsletter__subscribe"
+            class="subscribe newsletter__subscribe form"
           >
             <input
               type="text"
               class="subscribe__input"
               placeholder="Your email address"
-              name="mail"
+              name="email"
               required
             />
             <button class="subscribe__button">Send</button>
@@ -710,28 +710,31 @@
             <h3 class="footer__title footer__title--mb-32">
               Send us a message
             </h3>
-            <form action="send.php" method="POST" class="footer__form">
-              <input
-                type="text"
-                class="input footer__input"
-                placeholder="Your Full Name*"
-                name="name"
-                required
-              />
-              <input
-                type="text"
-                class="input footer__input"
-                placeholder="Phone Number*"
-                name="phone"
-                required
-              />
+            <form action="send.php" method="POST" class="footer__form form">
+              <div class="footer__input-group">
+                <input
+                  type="text"
+                  class="input footer__input"
+                  placeholder="Your Full Name*"
+                  name="name"
+                  required
+                />
+              </div>
+              <div class="footer__input-group">
+                <input
+                  type="tel"
+                  class="input footer__input"
+                  placeholder="Phone Number*"
+                  name="phone"
+                  required
+                />
+              </div>
               <textarea
                 cols="30"
                 rows="10"
                 class="message footer__message"
                 placeholder="Message"
                 name="message"
-                required
               ></textarea>
               <button class="button footer__button">Send</button>
               <span class="footer__info">* Required Fields</span>
@@ -764,26 +767,27 @@
           ><img src="img/close.svg" alt="Icon: close"
         /></a>
         <h3 class="modal__title">Booking</h3>
-        <form action="send.php" method="POST" class="modal__form">
+        <form action="send.php" method="POST" class="modal__form form">
           <input
             type="text"
             class="input modal__input"
             placeholder="Your Full Name*"
             name="name"
             required
+            minlength="2"
           />
           <input
-            type="text"
+            type="tel"
             class="input modal__input"
             placeholder="Phone Number*"
             name="phone"
             required
           />
           <input
-            type="text"
+            type="email"
             class="input modal__input"
             placeholder="Email*"
-            name="mail"
+            name="email"
             required
           />
           <textarea
@@ -792,7 +796,6 @@
             class="message modal__message"
             placeholder="Message"
             name="message"
-            required
           ></textarea>
           <div class="modal__footer">
             <button class="button modal__button">Send</button>
@@ -807,6 +810,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script src="js/parallax.min.js"></script>
     <script src="js/swiper-bundle.min.js"></script>
+    <script src="js/jquery.validate.min.js"></script>
     <script src="js/main.js"></script>
   </body>
 </html>
