fixed: newsletter input and send.php

--- a/index.html
+++ b/index.html
@@ -152,7 +152,9 @@
           </div>
           <div class="rating hotel-info__rating">
             <span class="rating__text">User Rattings</span>
-            <span class="rating__counter">4.5/5</span>
+            <span class="rating__counter"
+              >4.5/ <span class="rating__small">5</span>
+            </span>
           </div>
           <!-- /.rating hotel-info__rating -->
         </div>
@@ -275,7 +277,7 @@
             class="subscribe newsletter__subscribe form"
           >
             <input
-              type="text"
+              type="email"
               class="subscribe__input"
               placeholder="Your email address"
               name="email"
