--- a/thankyou.html
+++ b/thankyou.html
@@ -8,6 +8,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="css/swiper-bundle.min.css" />
+    <link rel="stylesheet" href="css/aos.css" />
     <link rel="stylesheet" href="css/styles.css" />
     <script src="https://api-maps.yandex.ru/2.1/?apikey=138986ea-965a-4669-b09c-37c6c7161bc9&lang=ru_RU"></script>
     <!-- type="text/javascript" -->
@@ -133,15 +134,15 @@
         <div class="hotel-info">
           <div class="hotel-info__text">
             <div class="hotel-wrapper">
-              <h1 class="hotel-name hotel-info__name">Сообщение отправлено!</h1>
+              <h1 class="hotel-name hotel-info__name">The message was sent!</h1>
             </div>
             <p class="hotel-description hotel-info__description">
-              Наш сотрудник свяжется с Вами в ближайшее время.
+              Our employee will contact You as soon as possible.
             </p>
             <a
               href="https://alexeyloktev.ru/homeworks/best-tour-plan/"
               class="back-to-index"
-              >Вернуться на главную.</a
+              >Go back to the main page.</a
             >
           </div>
         </div>
@@ -366,6 +367,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script src="js/parallax.min.js"></script>
     <script src="js/swiper-bundle.min.js"></script>
+    <script src="js/aos.js"></script>
     <script src="js/main.js"></script>
   </body>
 </html>
