--- a/index.html
+++ b/index.html
@@ -601,7 +601,12 @@
     <footer class="footer">
       <div class="container">
         <div class="footer-wrapper">
-          <a href="#" class="footer__logo-link"
+          <a
+            href="#"
+            class="footer__logo-link"
+            data-aos="fade-down"
+            data-aos-easing="linear"
+            data-aos-duration="1500"
             ><img
               src="img/vertical-logo.svg"
               alt="Logo: Best Tour Plan"
